# ai_safeguards

./: LICENSE  README.md  pyproject.toml
ai_safeguards/: safeguards.py
ai_safeguards/agents/: __init__.py  agents_settings.py  gpt_agent.py
ai_safeguards/embedders/: embedders.py
ai_safeguards/prompts/: __init__.py  claim_extraction.py  factuality_evaluator.py
tests/: test_safeguards.py
