[project]
name = "ai_safeguards"
version = "0.0.1"
description = "AISafeguards is a Python package with easy to use RAG metrics."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Lucas Miranda de Sena", email = "lucas.msena@outlook.com"}
]
requires-python = ">=3.8"
dependencies = [
  "scikit-learn",
  "numpy",
  "openai"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
